= Change Log

== Version 2.1.0.x

* Fixed typo in XmlMarkup class docs (ident => indent). (from Martin
  Fowler).
* Removed extra directory indirection from legacy CVS to SVN move.
* Removed some extraneous tabs from source.
* Fixed test on private methods in blankslate to differentiate between
  targetted and untargetted private methods.

== Version 2.1.0

* Fixed bug in BlankSlate where including a module into Object could
  cause methods to leak into BlankSlate.
* Made BlankSlate available as its own gem.  Currently the builder gem
  still directly includes the BlankSlate code.
* Added reveal capability to BlankSlate.

== Version 2.0.0

* Added doc directory
* Added unit tests for XmlEvents.
* Added XChar module and used it in the _escape method.
* Attributes are now quoted by default when strings.  Use Symbol
  attribute values for unquoted behavior.

== Version 1.2.4

* Added a cdata! command to an XML Builder (from Josh Knowles).

== Version 1.2.3

The attributes in the <?xml ... ?> instruction will be ordered:
version, encoding, standalone.

== Version 1.2.2

Another fix for BlankSlate.  The Kernal/Object traps added in 1.2.1
failed when a method was defined late more than once.  Since the
method was already marked as removed, another attempt to undefine it
raised an error.  The fix was to check the list of instance methods
before attempting the undef operation.  Thanks to Florian Gross and
David Heinemeier Hansson for the patch.

== Version 1.2.1

BlankSlate now traps method definitions in Kernel and Object to avoid
late method definitions inadvertently becoming part of the definition
of BlankSlate as well.

== Version 1.2.0

Improved support for entity declarations by allowing nested
declarations and removal of the attribute processing.

Added namespace support.

== Version 1.1.0

Added support for comments, entity declarations and processing instructions.

== Version 1.0.0

Removed use of <tt>instace_eval</tt> making the use of XmlMarkup much